[package]
authors = ["PureStake"]
description = "Primitives for session keys"
edition = "2021"
name = "session-keys-primitives"
version = "0.1.0"

[dependencies]
nimbus-primitives = { git = "https://github.com/manta-network/nimbus.git", branch = "manta-v0.9.18", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

[features]
default = ["std"]
std = [
  "nimbus-primitives/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-application-crypto/std",
  "sp-runtime/std",
]
