[package]
authors = ["PureStake"]
description = "Primitives for session keys"
edition = "2021"
name = "session-key-primitives"
version = "0.1.0"

[dependencies]
frame-support = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.18" }
frame-system = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.18" }
manta-primitives = { path = "../primitives", default-features = false }
nimbus-primitives = { git = "https://github.com/manta-network/nimbus.git", branch = "manta-v0.9.18", default-features = false }
pallet-aura = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.18" }
pallet-author-inherent = { git = "https://github.com/manta-network/nimbus.git", branch = "manta-v0.9.18", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.18" }
sp-core = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.18" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

[features]
default = ["std"]
std = [
  "nimbus-primitives/std",
  'pallet-aura/std',
  "parity-scale-codec/std",
  "pallet-author-inherent/std",
  "scale-info/std",
  "sp-application-crypto/std",
  "sp-runtime/std",
  'sp-core/std',
  'sp-consensus-aura/std',
  'frame-support/std',
  'frame-system/std',
]
