[package]
authors = ["Manta Network"]
edition = "2021"
homepage = "https://manta.network"
license = "GPL-3.0"
name = "pallet-asset-manager"
repository = 'https://github.com/Manta-Network/Manta/'
version = '3.4.3'

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
log = { version = "0.4.0", default-features = false }
manta-primitives = { path = "../../primitives/manta", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.26" }

# 3rd party dependencies
orml-traits = { git = "https://github.com/manta-network/open-runtime-module-library.git", default-features = false, branch = "polkadot-v0.9.26" }

[dev-dependencies]
pallet-assets = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "manta-primitives/runtime-benchmarks",
]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "manta-primitives/std",
  "orml-traits/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-arithmetic/std",
  "xcm/std",
]
try-runtime = [
  "frame-support/try-runtime",
]
