[package]
authors = ['Manta Network']
description = 'Simple staking pallet with a fixed stake.'
edition = "2021"
homepage = 'https://manta.network'
license = 'GPL-3.0'
name = 'manta-collator-selection'
readme = 'README.md'
repository = 'https://github.com/Manta-Network/Manta/'
version = '4.6.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { version = '3.4.0', default-features = false, features = ['derive'], package = 'parity-scale-codec' }
log = { version = "0.4.16", default-features = false }
rand = { version = "0.8.5", default-features = false, optional = true }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.140", default-features = false }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.43", optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.43" }
frame-system = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.43" }
nimbus-primitives = { git = "https://github.com/manta-network/nimbus.git", branch = "polkadot-v0.9.43", default-features = false }
pallet-authorship = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.43" }
pallet-session = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.43" }
sp-arithmetic = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.43" }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.43" }
sp-staking = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.43" }
sp-std = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.43" }

[dev-dependencies]
manta-primitives = { path = "../../primitives/manta" }
pallet-aura = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-tracing = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }

[features]
default = ['std']
runtime-benchmarks = [
  'frame-benchmarking/runtime-benchmarks',
  'frame-support/runtime-benchmarks',
  'frame-system/runtime-benchmarks',
  'nimbus-primitives/runtime-benchmarks',
  'rand/std_rng',
]
std = [
  'codec/std',
  'log/std',
  'scale-info/std',
  'sp-arithmetic/std',
  'serde/std',
  'sp-runtime/std',
  'sp-staking/std',
  'sp-std/std',
  'frame-support/std',
  'frame-system/std',
  'nimbus-primitives/std',
  'pallet-authorship/std',
  'pallet-session/std',

]
try-runtime = [
  'frame-support/try-runtime',
  'frame-system/try-runtime',
]
