[package]
authors = ['Manta Network']
description = 'Pallet implementing farming protocol.'
edition = "2021"
homepage = "https://manta.network"
license = "GPL-3.0"
name = "pallet-farming"
repository = 'https://github.com/Manta-Network/Manta/'
version = "4.6.0"

[dependencies]
codec = { workspace = true }
hex-literal = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

manta-primitives = { workspace = true }
orml-traits = { workspace = true }
pallet-asset-manager = { workspace = true, optional = true }
pallet-assets = { workspace = true, optional = true }
xcm = { workspace = true, optional = true }

[dev-dependencies]
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
  "codec/std",
  "log/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "manta-primitives/std",
  "scale-info/std",
  "pallet-assets/std",
  "pallet-asset-manager/std",
  "xcm/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-arithmetic/std",
  "sp-std/std",
  "orml-traits/std",
  "pallet-balances/std",
]

runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "pallet-assets/runtime-benchmarks",
  "xcm",
  "pallet-asset-manager",
]
try-runtime = ["frame-support/try-runtime"]
